# ECLIPSE

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
data/: DATA_STATUS.md
data/amplicon_repository/: README.json
data/cytocell_db/: CytoCellDB_Supp_File1.xlsx  README.txt  cytocell_template.csv
data/features/: hic_features.npz  module1_features_train.npz  module1_features_val.npz
data/supplementary/: cosmic_genes.csv  fragile_sites.csv  fragile_sites_hg38.bed  major_fragile_sites_hg38.bed
data/validation/: ablation_results.csv  calibration_curve.csv  calibration_summary.csv  circularode_cross_treatment.csv  circularode_lange_validation.csv  circularode_physics_ablation.csv  circularode_temporal_extrapolation.csv  crossval_results.csv  feature_effect_sizes.csv  feature_intercorrelations.csv  feature_label_correlations.csv  gsea_results.csv  gsea_vs_hypergeometric.csv  irm_ranking_correlations.csv  irm_robustness_results.csv  label_noise_analysis.csv  label_noise_summary.csv  lineage_loocv_results.csv  mlp_bootstrap_comparison.csv  mlp_crossval_results.csv  no_dosage_bootstrap.csv  no_dosage_results.csv  null_baseline_results.csv  null_distribution.csv  pathway_enrichment_results.csv  per_lineage_all.csv  per_lineage_val.csv  per_sample_predictions.csv  prediction_confidence.csv  prediction_histogram.csv  significance_results.csv  threshold_sweep.csv  volcano_data.csv  vulncausal_gdsc_real_validation.csv  vulncausal_gdsc_validation.csv  vulnerability_effect_summary.csv
scripts/: analyze_calibration.py  analyze_feature_correlation.py  analyze_label_noise.py  analyze_pathway_enrichment.py  analyze_per_lineage.py  analyze_prediction_confidence.py  analyze_vulnerabilities.py  analyze_vulnerability_effect_sizes.py  circularode_physics_ablation.py  compute_null_baseline.py  compute_significance.py  download_hic.sh  eclipse_demo.py  extract_features.py  extract_hic_features.py  extract_nonleaky_features.py  extract_real_features.py  generate_diverse_trajectories.py  generate_trajectories.py  irm_robustness_analysis.py  retrain_no_dosage.py  run_ablation.py  run_crossval.py  run_gsea.py  run_lineage_loocv.py  train_circularode.py  train_circularode_full.py  train_mlp_baseline.py  train_vulncausal.py  train_vulncausal_full.py  validate_circularode_lange.py  validate_ecdna_former.py  validate_vulncausal_gdsc.py  validate_vulncausal_gdsc_real.py  validate_vulnerabilities.py
src/: __init__.py
(+38 files in other folders)
