[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "eclipse-ecdna"
version = "0.1.0"
description = "Extrachromosomal Circular DNA Learning for Integrated Prediction of Synthetic-lethality and Expression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Bryan Cheng"},
    {name = "Jasper Zhang"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core ML frameworks
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torch-geometric>=2.3.0",
    "torchsde>=0.2.5",
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "h5py>=3.8.0",
    # Genomics
    "pybedtools>=0.9.0",
    "pyBigWig>=0.3.18",
    "cooler>=0.9.0",
    "biopython>=1.81",
    # Graph neural networks
    "networkx>=3.0",
    "dgl>=1.1.0",
    # Causal inference
    "dowhy>=0.9.0",
    "econml>=0.14.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    # Utilities
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "wandb>=0.15.0",
    # Hugging Face for DNA language models
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    # HTTP/API
    "aiohttp>=3.8.0",
    "aiofiles>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/bryanc5864/ECLIPSE"
Repository = "https://github.com/bryanc5864/ECLIPSE"
Issues = "https://github.com/bryanc5864/ECLIPSE/issues"

[project.scripts]
eclipse = "main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
